--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -3,8 +3,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 40px;
-  border-bottom: 1px solid #eee;
+  padding: 20px 96px;
+  border-bottom: 0.5px solid #7E7E7E;
   background: #fff;
 }
 
@@ -16,13 +16,16 @@
 
 /* Liens de navigation */
 .navbar-links a {
-  margin: 0 20px;
-  color: #222;
+  margin-left: 48px;
+  color: #434343;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 600;
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+  /* letter-spacing: -0.25px; */
 }
 
 /* Optionnel : ajout d’un effet au survol */
 .navbar-links a:hover {
-  color: #555;
+  color: #1D7874;
 }
