--- a/src/css/Traitement.css
+++ b/src/css/Traitement.css
@@ -2,9 +2,10 @@
 
 .traitement-container {
   font-family: Poppins, sans-serif;
-  background: linear-gradient(135deg, #f0fbfb, #f3f2dd);
+  background-color: #FDFDFD;
   padding: 40px;
   min-height: 100vh;
+  padding: 24px 96px;
 }
 
 .file-upload-section {
@@ -39,7 +40,6 @@
 }
 
 .page-header {
-  /* Assumes 'bg.png' is in your assets folder */
   background-image: url('../assets/bg.png'); 
   background-size: cover; 
   margin-top: -57px;
@@ -77,7 +77,7 @@
 }
 
 .rule-part select {
-  width: 250px;
+  /* width: 250px; */
   padding: 16px;
   border: 1px solid #E8F2F1;
   border-radius: 8px;
@@ -88,7 +88,6 @@
 
 .add-btn {
   padding: 16px 32px;
-  width: 129px;
   border: none;
   border-radius: 8px;
   background: #1D7874;
@@ -110,6 +109,9 @@
 }
 
 .rule-item {
+  display: flex;
+  align-items: center;
+  gap: 40px;
   border: 0.25px solid #606060;
   background-color: #FEF6EF;
   border-radius: 8px;
@@ -145,7 +147,7 @@
 .footer-buttons {
   display: flex;
   justify-content: space-between;
-  margin-top: 40px;
+  margin-top: 48px;
   gap: 24px;
 }
 
@@ -173,4 +175,84 @@
   letter-spacing: -0.5px;
   /* line-height: 36px; */
   cursor: pointer;
+}
+
+
+
+
+.formula-builder {
+display: flex;
+  flex-direction: row; 
+  /* Aligns items to the bottom */
+  align-items: flex-end; 
+  gap: 16px;
+  border-bottom: 1px solid #e0e0e0;
+  padding-bottom: 24px;
+  margin-bottom: 24px;
+}
+
+.formula-part {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+.formula-part label {
+  font-size: 14px;
+  font-weight: 500;
+  color: #333;
+}
+
+.formula-part input[type="text"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 14px;
+}
+
+.checklist-box {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  padding: 12px;
+  max-height: 150px;
+  overflow-y: auto;
+  background-color: #fff;
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 14px;
+}
+
+
+
+
+.display {
+  flex: 1; 
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 8px;
+}
+
+
+.btn-delete {
+  flex-shrink: 0;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-delete:hover {
+  background-color: #e0e0e0;
 }
